# directx

./: Application.h  CMakeLists.txt  CubePixelShader.hlsl  CubeVertexShader.hlsl  Renderer.cpp  Renderer.h  Timer.cpp  debug.h  directx.cpp  helper.h
src/: Application.cpp  Application.h  ApplicationClass.cpp  ApplicationClass.h  ApplicationWindow.cpp  ApplicationWindow.h  CubePixelShader.hlsl  CubeVertexShader.hlsl  DeviceResources.cpp  DeviceResources.h  GameModel.cpp  GameModel.h  MainWindow.cpp  MainWindow.h  MainWindowClass.cpp  MainWindowClass.h  Mesh.cpp  Mesh.h  OpenSimplexNoise.cpp  Registry.cpp  Registry.h  Renderer.cpp  Renderer.h  StanfordParser.cpp  StanfordParser.h  Timer.h  debug.cpp  directx.cpp  framework.h  helper.cpp  helper.h  stdafx.h  targetver.h
src/assets/: cone.ply  house.ply  sphere.ply  test.ply  torus.ply
